apps/deluge/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: media
  labels:
    app.kubernetes.io/part-of: gitops
