apps/deluge/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deluge-ingress
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: "local-selfsigned"
  labels:
    app.kubernetes.io/part-of: gitops
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - deluge.home.dcxxiv.com
      secretName: deluge-tls
  rules:
    - host: deluge.home.dcxxiv.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deluge
                port:
                  number: 8112
